Correction Tablette plat/menu & journal

--- a/src/app/intranet/nutrition/bottom-bar-nutri/bottom-bar-nutri.component.scss
+++ b/src/app/intranet/nutrition/bottom-bar-nutri/bottom-bar-nutri.component.scss
@@ -13,7 +13,7 @@ footer {
   font-family: $font-family;
   height: 150px;
   width: 100%;
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 834px) {
     height: 100px;    
   }
   @media screen and (max-width: 480px) {
@@ -64,7 +64,7 @@ footer {
           @media screen and (max-width: 1200px) {
             font-size: 1.1rem;
           }
-          @media screen and (max-width: 768px) {
+          @media screen and (max-width: 834px) {
             font-size: 0.9rem;
           }
         }
